--- a/application/static/css/mockups/fss-escalator.css
+++ b/application/static/css/mockups/fss-escalator.css
@@ -203,3 +203,47 @@ div.smallDeparture div.right > div p {
   padding: 0;
   padding-left: 5px;
 }
+
+
+@media(prefers-color-scheme: dark) {
+
+  body {
+    background-color: #000000;
+    color: #ffffff;
+  }
+
+  div.firstDepartureTime div.timeToDeparture {
+    color: #000000;
+    background-color: #ffffff;
+  }
+
+  div.blackLine {
+    background-color: #ffffff;
+  }
+
+  div.smallDeparture div.right div.timeToDeparture {
+    color: #000000;
+    background-color: #ffffff;
+  }
+
+  div.stationRow p.stopsAt {
+    color: #ffffff !important;
+  }
+
+  .stoppingAt {
+    background-color: #000000 !important;
+  }
+
+  div.stationRow p.express {
+    color: #282828;
+  }
+
+}
+
+@media(prefers-color-scheme: light) {
+
+  .stoppingAt {
+    background-color: #ffffff !important;
+  }
+
+}
